Add version number

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="btn" onclick="location.reload()" class="center">again</div>
             </div>
         </div>
-        <div class="center" style="position: absolute; bottom: 0;" id="ftr">all content &copy;2022 Alex Hooper.</div>
+        <div class="center" style="position: absolute; bottom: 0;" id="ftr">all content &copy;2022 Alex Hooper. <span>v.1.0.5</span></div>
     <script type="text/javascript" src="scripts.js"></script>
     
     </body>
